# taskapi

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  app.py  asana_fastapi.py  pyproject.toml  setup.cfg
.github/: README.md  update_badges.py
.github/workflows/: ci-update.yml  ci.yml  ci_backup.yml  container.yml  custom.yml  main.yml
app/: config.py  crud.py  db.py  main.py  models.py  prestart.sh  schemas.py  tag_meta.py
app/auth/: auth.py  auth_router.py  auth_utils.py
app/routers/: columns.py  projects.py  tasks.py  teams.py  users.py
app/templates/: base.html  index.html  item.html
docker/: Dockerfile  Dockerfile.prod  docker-compose.yml  release.py  release.sh  start-reload.sh  start.sh  startup.py  startup_dev.py
migrations/: alembic.ini  env.py  seed.py
migrations/versions/: 20201118_1150_users_teams_projects.py  20201118_1212_users_teams_projects.py  20201119_0958_init.py  20201119_1010_init.py  20201119_1352_init.py
tests/: conftest.py  seed.py  test_auth_router_unit.py  test_auth_utils.py  test_columns.py  test_columns_unit.py  test_crud.py  test_db.py  test_main.py  test_models.py  test_projects.py  test_projects_unit.py  test_tasks_unit.py  test_teams_unit.py  test_user.py  test_users.py  test_users_unit.py
