[tool.poetry]
name = "asana_api"
version = "0.1.0"
description = "api server for asana clone"
authors = ["Cole Rutledge <ColeRutledge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.61.2"
uvicorn = {extras = ["standard"], version = "^0.12.2"}
gunicorn = "^20.0.4"
SQLAlchemy = "^1.3.20"
alembic = "^1.4.3"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
